made nice source

--- a/source/frontend/index.html
+++ b/source/frontend/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>Welcome to Webtech</h1>
-  <p>Please upload a cvs file</p>
+  <p>Please upload a csv file</p>
   <input type="file" name="data" accept=".csv">
 </body>
 </html>
