--- a/source/frontend/index.html
+++ b/source/frontend/index.html
@@ -3,11 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet"> 
+  <link rel="stylesheet" href="build/css/global.css">
+  <script src="src/js/ajax.js"></script>
   <title>Webtech</title>
 </head>
 <body>
   <h1>Welcome to Webtech</h1>
   <p>Please upload a csv file</p>
-  <input type="file" name="data" accept=".csv">
+  <form id="inputForm">
+    <input type="file" name="data" accept=".csv">
+  </form>
+  <button onclick="getData()">Submit</button>
 </body>
 </html>
