--- a/frontend_exploring/index.html
+++ b/frontend_exploring/index.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- vendor -->
-  <script src="vendor/d3.min.js"></script>
+  <script src="/vendor/d3.min.js"></script>
   <!-- styles -->
   <link rel="stylesheet" href="style.css">
   <!-- scripts -->
-  <script src="scripts/dummydata.js"></script>
-  <script src="scripts/createdata.js"></script>
-  <script defer src="scripts/plot.js"></script>
-  <script defer src="scripts/giveColours.js"></script>
+  <script src="/scripts/dummydata.js"></script>
+  <script src="/scripts/createdata.js"></script>
+  <script defer src="/scripts/plot.js"></script>
+  <script defer src="/scripts/giveColours.js"></script>
   <title>Webtech</title>
 </head>
 <body>
